--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: SlackIntegration
 version: 1.0
 author: VoidWhisperer
 main: edu.rit.chrisbitler.ritcraft.slackintegration.SlackIntegration
+softdepend: [AdminPrivateChat]
